--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "node server.mjs",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.mjs",
     "lint": "next lint"
   },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "next": "15.2.4",
+    "appwrite": "14.0.1",
+    "dotenv": "^16.4.7",
+    "jwt-decode": "^4.0.0",
+    "jwt-encode": "^1.0.1",
+    "mongodb": "^6.15.0",
+    "node-appwrite": "11.1.1",
+    "postcss": "^8.5.3",
+    "react-hook-form": "^7.54.2",
+    "react-webcam": "^7.2.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
